# lyra-hackathon-2

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: .gitkeep  env.py
apps/api/alembic/versions/: 0001_init.py  0002_step_run_leases.py  0003_evidence_checkpoints.py  0004_hook_config.py  0005_hook_call_idempotency.py  0006_mcp_oauth_connections.py  0007_workflow_graph_metadata.py
apps/api/praetor_api/: __init__.py  bus.py  db.py  hashchain.py  main.py  run_server.py  settings.py
apps/api/praetor_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/praetor_api/models/: __init__.py  agent_event.py  approval.py  asset.py  audit_packet.py  base.py  hook.py  (+16 more)
apps/api/tests/: test_corpora_hooks.py  test_demo_audit_flow.py  test_demo_seed.py  test_demo_simulator.py  test_event_streams.py  test_hashchain.py  test_health.py  test_json_stack_hooks.py  test_mcp_client.py  test_models_and_hooks.py  test_policy.py  test_production_repositories.py  test_runtime_config.py  test_workflows.py
apps/workflow/: Dockerfile  pyproject.toml
apps/workflow/praetor_workflow/: __init__.py  dag.py  runtime.py  templating.py  worker.py
apps/workflow/praetor_workflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/workflow/templates/: .gitkeep  __init__.py  ai_system_intake.py  code_compliance_scan.py  code_compliance_scan_full.py  evidence_collection.py  policy_gap_analysis.py  vendor_risk_review.py
apps/workflow/tests/: test_runtime.py  test_worker.py
(+217 files in other folders)
