[project]
name = "praetor-api"
version = "0.1.0"
description = "FastAPI gateway for Praetor."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "anthropic>=0.34.0",
  "mcp>=1.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["praetor_api*"]

[tool.setuptools.package-data]
praetor_api = [
  "seed_content/corpora_seed/*.md",
  "seed_content/obligations/*.yaml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
