[project]
name = "praetor-workflow"
version = "0.1.0"
description = "Typed DAG workflow runtime for Praetor."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["praetor_workflow*", "templates*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
